--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,9 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
 @plugin 'daisyui' {
-    themes: 'all'
+  themes: "all";
 }
 
-@import 'boxicons';
+@import "boxicons";
